fast_forward_macros/tests/ui/fail_invalid_store.stderr
error[E0412]: cannot find type `UIntIndex` in this scope
 --> tests/ui/fail_invalid_store.rs:8:13
  |
8 |         id: UIntIndex => 0,
  |             ^^^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
1 + use fast_forward::index::uint::UIntIndex;
  |
